Fixing tablet view issues
cards were not showing up correctly at very specific screen res

--- a/src/nationalcareers_toolkit/assets/src/frontend/sass/compui/ypfc.scss
+++ b/src/nationalcareers_toolkit/assets/src/frontend/sass/compui/ypfc.scss
@@ -843,9 +843,6 @@
     (device-width: 915px) and (device-height: 412px),
     (device-width: 820px) and (device-height: 1180px),
     (device-width: 912px) and (device-height: 1368px) {
-        .ypfc-box {
-            height: 0px !important;
-        }
 
         .traineeship-box {
             height: 320px !important;
